<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FiltersActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/linearLayoutFilters"
            android:contentDescription="@string/imageViewDescription"
            android:scaleType="fitStart"
            app:srcCompat="@drawable/default_image" />

        <ImageView
            android:id="@+id/histogramView"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_above="@id/filtersMenu"
            android:layout_margin="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/histbackground"
            android:contentDescription="@string/histogramImageView"
            android:padding="1dp"
            android:scaleType="fitXY"
            android:visibility="visible"
            tools:visibility="visible" />

        <LinearLayout
            android:id="@+id/linearLayoutFilters"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal">

            <Button
                android:id="@+id/cancelButton"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/cancelButton"
                android:textAllCaps="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textSize="18sp" />

            <Button
                android:id="@+id/filterNameButton"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textAllCaps="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textSize="18sp" />

            <Button
                android:id="@+id/applyButton"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/applyButton"
                android:textAllCaps="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/filtersMenu"
            style="@android:style/ButtonBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/linearLayoutFilters"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:visibility="visible">

            <LinearLayout
                style="@android:style/ButtonBar"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:background="#00FFFFFF"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/pickButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="visible"
                    android:background="#00FFFFFF"
                    android:src="@drawable/pick"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"
                    android:contentDescription="@string/pickButton" />

                <ImageButton
                    android:id="@+id/maskButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="visible"
                    android:background="#00FFFFFF"
                    android:src="@drawable/mask"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"
                    android:contentDescription="@string/maskButton" />

                <ImageButton
                    android:id="@+id/histogramButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="visible"
                    android:background="#00FFFFFF"
                    android:src="@drawable/histogram"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"
                    android:contentDescription="@string/histogramButton" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="15dp"
                android:layout_marginStart="40dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <SeekBar
                    android:id="@+id/colorSeekBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/gradient_color"
                    android:max="359"
                    android:min="0"
                    android:progressBackgroundTint="#00000000"
                    android:progressTint="#00000000"
                    android:thumbTint="#000"
                    android:visibility="visible" />

                <SeekBar
                    android:id="@+id/seekBar1"
                    style="@android:style/Widget.Material.SeekBar.Discrete"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:visibility="visible" />

                <SeekBar
                    android:id="@+id/seekBar2"
                    style="@android:style/Widget.Material.SeekBar.Discrete"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:visibility="visible" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="15dp"
                android:layout_marginStart="40dp"
                android:layout_weight="0"
                android:orientation="vertical">

                <Switch
                    android:id="@+id/switch1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_marginStart="26dp" />

                <TextView
                    android:id="@+id/seekBarValue1"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:visibility="visible" />

                <TextView
                    android:id="@+id/seekBarValue2"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:visibility="visible" />

            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>